# CustroEngine

./: .gitignore  CMakeLists.txt
CustroEngine/: CustroEngine.cpp
CustroEngine/src/: CameraSystem.cpp  CameraSystem.h  CustroEngine.cpp  CustroEngine.h  DefaultShader.glsl  Shader.cpp  Shader.h  Test.cpp  Window.cpp  Window.h  types.hpp
CustroEngine/src/Core/: GameObject.h  Scene.h
CustroEngine/src/Gameplay/: Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
CustroEngine/src/Gameplay/Components/: Component.h  EntityComponent.cpp  EntityComponent.h  MeshComponent.cpp  MeshComponent.h  Transform.cpp  Transform.h
CustroEngine/src/Gameplay/Components/EntityComponents/: BehaviourComponent.cpp  BehaviourComponent.h  SpatialComponent.cpp  SpatialComponent.h
CustroEngine/src/Gameplay/Components/EntityComponents/SpatialComponents/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h
CustroEngine/src/Input/: Input.cpp  Input.h  InputAction.h  InputMapping.cpp  InputMapping.h
CustroEngine/src/Render/: Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.h
CustroEngine/src/Shader/: fragmentShader.glsl  fragmentShader_USEAFTER.glsl  vertexShader.glsl
CustroEngine/src/utils/: String.cpp  String.h  Utils.cpp  Utils.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/lib/: glfw3.lib
